--- a/order_consumer/src/main/resources/templates/pages/waiters/takeorder.html
+++ b/order_consumer/src/main/resources/templates/pages/waiters/takeorder.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <base href="<%=basePath%>">
-<!--lmwlmwlmwlmw-->
+<!--lmwlmwlmwlmwlmwhhh-->
 <title>${ORDER_SYS_NAME}-餐厅管理员</title>
 
 <meta http-equiv="pragma" content="no-cache">
