--- a/order_consumer/src/main/resources/templates/pages/admin/adduser.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/adduser.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-
-		<title>${ORDER_SYS_NAME}-增加用户</title>
+		<meta charset="utf-8">
+		<title>增加用户</title>
 
 		<meta http-equiv="pragma" content="no-cache">
 		<meta http-equiv="cache-control" content="no-cache">
@@ -16,8 +16,8 @@
 
 		<!-- 可选的Bootstrap主题文件（一般不用引入） -->
 
-		<link rel="stylesheet" href="../../../static/css/font-awesome.min.css">
-		<link rel="stylesheet" href="../../../static/css/dashboard.css">
+		<link rel="stylesheet" href="/css/font-awesome.min.css">
+		<link rel="stylesheet" href="/css/dashboard.css">
 		<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
 		<script src="bootstrap/js/jquery-1.11.1.min.js"></script>
 
@@ -134,13 +134,13 @@
 								</div>
 
 								<div class="form-group">
-									<label for="lastname" class="col-sm-2 control-label">密&nbsp;&nbsp;&nbsp;&nbsp;码:</label>
+									<label for="userPass" class="col-sm-2 control-label">密&nbsp;&nbsp;&nbsp;&nbsp;码:</label>
 									<div class="col-sm-10">
 										<input type="password" class="form-control" id="userPass" name="userPass" placeholder="请输入新员工的密码">
 									</div>
 								</div>
 								<div class="form-group">
-									<label for="lastname" class="col-sm-2 control-label">确&nbsp;&nbsp;&nbsp;&nbsp;认:</label>
+									<label for="userPass1" class="col-sm-2 control-label">确&nbsp;&nbsp;&nbsp;&nbsp;认:</label>
 									<div class="col-sm-10">
 										<input type="password" class="form-control" id="userPass1" name="userPass1" placeholder="请再次输入新员工的密码" onblur="checkpass()">
 									</div>
@@ -207,7 +207,7 @@
 				<div style="height:1px;width: 100%;background: #CCC;margin-bottom: 10px"></div>
 
 				<footer>
-					<p>&copy; ${ORDER_SYS_NAME}-中软国际ETC 2015</p>
+					<p>江西朝腾</p>
 				</footer>
 	</body>
 </html>
