--- a/order_consumer/src/main/resources/templates/pages/admin/main_backup1.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/main_backup1.html
@@ -1,9 +1,7 @@
-
 <html>
 <head>
-<base href="<%=basePath%>">
-
-<title>${ORDER_SYS_NAME}-餐厅管理员</title>
+	<meta charset="utf-8">
+<title>餐厅管理员</title>
 
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
@@ -13,18 +11,18 @@
 <!--
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	-->
-<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" href="../../../static/css/dashboard.css">
+<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/dashboard.css">
 
 
-<link rel="stylesheet" href="css/font-awesome.min.css">
+<link rel="stylesheet" href="/css/font-awesome.min.css">
 
 <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-<script src="../../../static/bootstrap/js/jquery-1.11.1.min.js"></script>
+<script src="/bootstrap/js/jquery-1.11.1.min.js"></script>
 
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="../../../static/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/ajax.js"></script>
+<script src="/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/ajax.js"></script>
 <script type="text/javascript">
 	function createXmlDom(str) {
 		if (document.all) {
@@ -266,16 +264,16 @@
 										<td>Lorem</td>
 										<td>ipsum</td>
 										<td>dolor</td>
-										<td><i style="cursor: pointer; font-size: 14;"
+										<td><i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-credit-card icon-large" title="确认结账"></i>&nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
+											style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-sitemap icon-large" title="查看订单详情"
 											onclick="$('#myModal').modal('show')"></i> &nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
+											style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class=" icon-remove-sign icon-large" title="订单作废"
@@ -328,14 +326,6 @@
 				</div>
 				<div class="modal-body"
 					style="background-image: url('img/body-bg.png')">
-
-
-
-
-
-
-
-
 					<div class="container-fluid" style="padding: 0px 0px;">
 						<div class="row-fluid">
 							<div class="span6" style="width:30%;float:left">
@@ -344,7 +334,7 @@
 									<h2 style="color: white;font-weight: bold;font-family: 微软雅黑">桌号</h2>
 									<p id="tableId">101</p>
 
-									<p style="text-align: center;font-size: 24;margin-top: 11px ">
+									<p style="text-align: center;font-size: 24px;margin-top: 11px ">
 										<i class="icon-warning-sign icon-large"></i>
 									</p>
 								</div>
