--- a/order_consumer/src/main/resources/templates/pages/admin/useradmin.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/useradmin.html
@@ -1,9 +1,7 @@
 <html>
 	<head>
-		<base href="<%=basePath%>">
-
-		<title>${ORDER_SYS_NAME}-餐厅管理员</title>
-
+		<meta charset="utf-8">
+		<title>餐厅管理员</title>
 		<meta http-equiv="pragma" content="no-cache">
 		<meta http-equiv="cache-control" content="no-cache">
 		<meta http-equiv="expires" content="0">
@@ -13,15 +11,15 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	-->
 
-		<link rel="stylesheet" href="../../../static/css/dashboard.css">
+		<link rel="stylesheet" href="/css/dashboard.css">
 
 
 		<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-		<script src="bootstrap/js/jquery-1.11.1.min.js"></script>
+		<script src="/ootstrap/js/jquery-1.11.1.min.js"></script>
 
 		<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-		<script src="bootstrap/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="js/ajax.js"></script>
+		<script src="/bootstrap/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="/js/ajax.js"></script>
 		<script type="text/javascript">
 			function deleteUser(id, name, obj) {
 
