--- a/order_consumer/src/main/resources/templates/pages/admin/adddishes.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/adddishes.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-<base href="<%=basePath%>">
+	<meta charset="utf-8">
 
 <title>${ORDER_SYS_NAME}-餐厅管理员</title>
 
@@ -13,7 +13,7 @@
 <!--
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	-->
-<link rel="stylesheet" href="../../../static/css/dashboard.css">
+<link rel="stylesheet" href="/css/dashboard.css">
 
 
 <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
@@ -106,6 +106,7 @@
 		testState();
 	}
 </script>
+
 </head>
 
 <body style="font-family: 微软雅黑">
@@ -152,22 +153,21 @@
 									</div>
 
 									<div class="form-group">
-										<label for="lastname" class="col-sm-2 control-label">简&nbsp;&nbsp;&nbsp;&nbsp;介:</label>
+										<label for="dishesDiscript" class="col-sm-2 control-label">简&nbsp;&nbsp;&nbsp;&nbsp;介:</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" id="dishesDiscript"
 												name="dishesDiscript" placeholder="请输入少于100字的简介">
 										</div>
 									</div>
 									<div class="form-group">
-										<label for="lastname" class="col-sm-2 control-label">说&nbsp;&nbsp;&nbsp;&nbsp;明:</label>
+										<label  class="col-sm-2 control-label">说&nbsp;&nbsp;&nbsp;&nbsp;明:</label>
 										<div class="col-sm-10">
 											<textarea rows="8" class="form-control" name="dishesTxt"></textarea>
 										</div>
-
 										<div style="color: red;float: right;" id="passerror"></div>
 									</div>
 									<div class="form-group">
-										<label for="lastname" class="col-sm-2 control-label">价&nbsp;&nbsp;&nbsp;&nbsp;格:</label>
+										<label for="dishesPrice" class="col-sm-2 control-label">价&nbsp;&nbsp;&nbsp;&nbsp;格:</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" id="dishesPrice"
 												name="dishesPrice" placeholder="请输入菜品价格"
@@ -177,10 +177,10 @@
 									</div>
 
 									<div class="form-group">
-										<label for="lastname" class="col-sm-2 control-label"></label>
+										<label for="recommend" class="col-sm-2 control-label"></label>
 										<div class="col-sm-10">
 											<input type="checkbox" name="recommend" id="recommend"
-												value="1" /> <span style="font-size: 16;font-weight: bold;">推荐菜品</span>
+												value="1" /> <span style="font-size: 16px;font-weight: bold;">推荐菜品</span>
 										</div>
 										<div style="color: red;float: right;" id="priceerror"></div>
 									</div>
@@ -230,7 +230,7 @@
 										<div class="form-group">
 											<label class="sr-only" for="inputfile">文件输入</label> <input
 												type="file" id="inputfile" name="uploadFile"
-												style="width:90">
+												style="width:90px">
 										</div>
 
 										<input type="button" class="btn btn-danger" value="上传图片"
