--- a/order_consumer/src/main/resources/templates/pages/admin/dishesadmin.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/dishesadmin.html
@@ -1,8 +1,8 @@
 
 <html>
 <head>
-
-<title>${ORDER_SYS_NAME}-餐厅管理员</title>
+	<meta charset="utf-8">
+<title>餐厅管理员</title>
 
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
@@ -10,8 +10,12 @@
 <meta http-equiv="keywords" content="keyword1,keyword2,keyword3">
 <meta http-equiv="description" content="This is my page">
 
-<link rel="stylesheet" href="../../../static/css/dashboard.css">
 
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/dashboard.css">
+
+
+	<link rel="stylesheet" href="/css/font-awesome.min.css">
 
 
 <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
@@ -258,17 +262,7 @@
 					<h4 class="modal-title" id="myModalLabel">详细信息</h4>
 				</div>
 				<div class="modal-body"
-					style="background-image: url('img/body-bg.png')">
-
-
-
-
-
-
-
-
-
-
+					style="background-image: url('/img/body-bg.png')">
 					<div class="panel panel-danger" style="margin-top: 10px">
 						<div class="panel-heading">
 							<h3 class="panel-title">菜品详情</h3>
