--- a/order_consumer/src/main/resources/templates/pages/admin/dishesadmin_backup.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/dishesadmin_backup.html
@@ -13,17 +13,17 @@
 <!--
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	-->
-<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" href="css/dashboard.css">
+<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/dashboard.css">
 
 
-<link rel="stylesheet" href="css/font-awesome.min.css">
+<link rel="stylesheet" href="/css/font-awesome.min.css">
 
 <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-<script src="bootstrap/js/jquery-1.11.1.min.js"></script>
+<script src="/bootstrap/js/jquery-1.11.1.min.js"></script>
 
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript">
 	function cancel(obj) {
 
@@ -114,7 +114,7 @@
 			<div class="col-sm-3 col-md-2 sidebar">
 				<ul class="nav nav-sidebar">
 					<li class="nav-header"
-						style="font-size: 18;margin-bottom: 10px;margin-left: 10px"><i
+						style="font-size: 18px;margin-bottom: 10px;margin-left: 10px"><i
 						class="icon-credit-card icon-large"></i>&nbsp;运营功能</li>
 					<li><a href="#"><i
 							class="icon-money icon-large"></i>&nbsp; 顾客结账界面 <span
@@ -124,7 +124,7 @@
 				</ul>
 				<ul class="nav nav-sidebar">
 					<li class="nav-header"
-						style="font-size: 18;margin-bottom: 10px;margin-left: 10px"><i
+						style="font-size: 18px;margin-bottom: 10px;margin-left: 10px"><i
 						class="icon-cog icon-large"></i>&nbsp;餐厅管理</li>
 					<li><a href="#"><i class="icon-group icon-large"></i>&nbsp;员工管理</a></li>
 					<li  class="active"><a href="#"><i class="icon-coffee icon-large"></i>&nbsp;菜品管理</a></li>
@@ -226,35 +226,31 @@
 										<td>Lorem</td>
 										<td>ipsum</td>
 										<td>dolor</td>
-										<td><i style="cursor: pointer; font-size: 14;"
+										<td><i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-credit-card icon-large" title="确认结账"></i>&nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
+											style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-sitemap icon-large" title="查看订单详情"
-											onclick="$('#myModal').modal('show')"></i> &nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
-											onmouseover="this.style.color='orange'"
-											onmouseout="this.style.color='black'"
-											class=" icon-remove-sign icon-large" title="订单作废"
-											onclick="cancel(this)"></i></td>
+											onclick="$('#myModal').modal('show')"></i> &nbsp;&nbsp;
+											<i style="cursor: pointer; font-size: 14px;" onmouseover="this.style.color='orange'" onmouseout="this.style.color='black'" class=" icon-remove-sign icon-large" title="订单作废" onclick="cancel(this)"></i></td>
 									</tr>
 									<tr>
 										<td>1,002</td>
 										<td>amet</td>
 										<td>consectetur</td>
 										<td>adipiscing</td>
-										<td><i style="cursor: pointer; font-size: 14;"
+										<td><i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-credit-card icon-large" title="确认结账"></i>&nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
+											style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-sitemap icon-large" title="查看订单详情"></i>
-											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14;"
+											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class=" icon-remove-sign icon-large" title="订单作废"></i></td>
@@ -264,15 +260,15 @@
 										<td>Integer</td>
 										<td>nec</td>
 										<td>odio</td>
-										<td><i style="cursor: pointer; font-size: 14;"
+										<td><i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-credit-card icon-large" title="确认结账"></i>&nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
+											style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-sitemap icon-large" title="查看订单详情"></i>
-											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14;"
+											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class=" icon-remove-sign icon-large" title="订单作废"></i></td>
@@ -282,15 +278,15 @@
 										<td>libero</td>
 										<td>Sed</td>
 										<td>cursus</td>
-										<td><i style="cursor: pointer; font-size: 14;"
+										<td><i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-credit-card icon-large" title="确认结账"></i>&nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
+											style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-sitemap icon-large" title="查看订单详情"></i>
-											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14;"
+											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class=" icon-remove-sign icon-large" title="订单作废"></i></td>
@@ -300,15 +296,15 @@
 										<td>dapibus</td>
 										<td>diam</td>
 										<td>Sed</td>
-										<td><i style="cursor: pointer; font-size: 14;"
+										<td><i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-credit-card icon-large" title="确认结账"></i>&nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
+											style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-sitemap icon-large" title="查看订单详情"></i>
-											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14;"
+											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class=" icon-remove-sign icon-large" title="订单作废"></i></td>
@@ -318,15 +314,15 @@
 										<td>Nulla</td>
 										<td>quis</td>
 										<td>sem</td>
-										<td><i style="cursor: pointer; font-size: 14;"
+										<td><i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-credit-card icon-large" title="确认结账"></i>&nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
+											style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-sitemap icon-large" title="查看订单详情"></i>
-											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14;"
+											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class=" icon-remove-sign icon-large" title="订单作废"></i></td>
@@ -336,15 +332,15 @@
 										<td>nibh</td>
 										<td>elementum</td>
 										<td>imperdiet</td>
-										<td><i style="cursor: pointer; font-size: 14;"
+										<td><i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-credit-card icon-large" title="确认结账"></i>&nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
+											style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-sitemap icon-large" title="查看订单详情"></i>
-											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14;"
+											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class=" icon-remove-sign icon-large" title="订单作废"></i></td>
@@ -354,15 +350,15 @@
 										<td>sagittis</td>
 										<td>ipsum</td>
 										<td>Praesent</td>
-										<td><i style="cursor: pointer; font-size: 14;"
+										<td><i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-credit-card icon-large" title="确认结账"></i>&nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
+											style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-sitemap icon-large" title="查看订单详情"></i>
-											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14;"
+											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class=" icon-remove-sign icon-large" title="订单作废"></i></td>
@@ -372,15 +368,15 @@
 										<td>Fusce</td>
 										<td>nec</td>
 										<td>tellus</td>
-										<td><i style="cursor: pointer; font-size: 14;"
+										<td><i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-credit-card icon-large" title="确认结账"></i>&nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
+											style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-sitemap icon-large" title="查看订单详情"></i>
-											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14;"
+											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class=" icon-remove-sign icon-large" title="订单作废"></i></td>
@@ -390,15 +386,15 @@
 										<td>augue</td>
 										<td>semper</td>
 										<td>porta</td>
-										<td><i style="cursor: pointer; font-size: 14;"
+										<td><i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-credit-card icon-large" title="确认结账"></i>&nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
+											style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-sitemap icon-large" title="查看订单详情"></i>
-											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14;"
+											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class=" icon-remove-sign icon-large" title="订单作废"></i></td>
@@ -408,15 +404,15 @@
 										<td>massa</td>
 										<td>Vestibulum</td>
 										<td>lacinia</td>
-										<td><i style="cursor: pointer; font-size: 14;"
+										<td><i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-credit-card icon-large" title="确认结账"></i>&nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
+											style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-sitemap icon-large" title="查看订单详情"></i>
-											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14;"
+											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class=" icon-remove-sign icon-large" title="订单作废"></i></td>
@@ -426,15 +422,15 @@
 										<td>eget</td>
 										<td>nulla</td>
 										<td>Class</td>
-										<td><i style="cursor: pointer; font-size: 14;"
+										<td><i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-credit-card icon-large" title="确认结账"></i>&nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
+											style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-sitemap icon-large" title="查看订单详情"></i>
-											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14;"
+											&nbsp;&nbsp;<i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class=" icon-remove-sign icon-large" title="订单作废"></i></td>
@@ -485,15 +481,7 @@
 					<h4 class="modal-title" id="myModalLabel">订单详情</h4>
 				</div>
 				<div class="modal-body"
-					style="background-image: url('img/body-bg.png')">
-
-
-
-
-
-
-
-
+					style="background-image: url('/img/body-bg.png')">
 					<div class="container-fluid" style="padding: 0px 0px;">
 						<div class="row-fluid">
 							<div class="span6" style="width:30%;float:left">
@@ -502,7 +490,7 @@
 									<h2 style="color: white;font-weight: bold;font-family: 微软雅黑">桌号</h2>
 									<p>101</p>
 
-									<p style="text-align: center;font-size: 24;margin-top: 11px ">
+									<p style="text-align: center;font-size: 24px;margin-top: 11px ">
 										<i class="icon-warning-sign icon-large"></i>
 									</p>
 								</div>
