--- a/order_consumer/src/main/resources/templates/pages/admin/modifydishes.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/modifydishes.html
@@ -1,29 +1,24 @@
-
+<!DOCTYPE html>
 <html>
 <head>
-
-<title>${ORDER_SYS_NAME}-餐厅管理员</title>
-
+	<meta charset="utf-8">
+<title>餐厅管理员</title>
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
 <meta http-equiv="keywords" content="keyword1,keyword2,keyword3">
 <meta http-equiv="description" content="This is my page">
-<!--
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	-->
-<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" href="../../../static/css/dashboard.css">
 
-
-<link rel="stylesheet" href="css/font-awesome.min.css">
+<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/dashboard.css">
+<link rel="stylesheet" href="/css/font-awesome.min.css">
 
 <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
 <script src="bootstrap/js/jquery-1.11.1.min.js"></script>
 
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/ajax.js"></script>
+<script src="/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/ajax.js"></script>
 <script type="text/javascript">
 	function begin() {
 
@@ -199,7 +194,7 @@
 										<div class="col-sm-10">
 											<input type="checkbox" name="recommend" id="recommend"
 												${DISHES_INFO.recommend==1?"checked=\"checked\"":"" }
-												value="1" /> <span style="font-size: 16;font-weight: bold;">推荐菜品</span>
+												value="1" /> <span style="font-size: 16px;font-weight: bold;">推荐菜品</span>
 										</div>
 										<div style="color: red;float: right;" id="priceerror"></div>
 									</div>
@@ -248,7 +243,7 @@
 										<div class="form-group">
 											<label class="sr-only" for="inputfile">文件输入</label> <input
 												type="file" id="inputfile" name="uploadFile"
-												style="width:90">
+												style="width:90px">
 										</div>
 
 										<input type="button" class="btn btn-danger" value="上传图片"
