--- a/order_consumer/src/main/resources/templates/pages/admin/modifyuser.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/modifyuser.html
@@ -1,18 +1,9 @@
-<%@ page language="java" import="java.util.*" pageEncoding="UTF-8"%>
-<%@taglib prefix="c" uri="http://java.sun.com/jstl/core_rt"%>
-<%
-	String path = request.getContextPath();
-	String basePath = request.getScheme() + "://"
-			+ request.getServerName() + ":" + request.getServerPort()
-			+ path + "/";
-%>
 
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<base href="<%=basePath%>">
+	<meta charset="utf-8">
 
-<title>${ORDER_SYS_NAME}-修改用户账户信息</title>
+<title>修改用户账户信息</title>
 
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
@@ -187,14 +178,14 @@
 
 
 						<div class="form-group">
-							<label for="lastname" class="col-sm-2 control-label">新密码:</label>
+							<label for="userPass" class="col-sm-2 control-label">新密码:</label>
 							<div class="col-sm-10">
 								<input type="password" class="form-control" id="userPass"
 									name="userPass" placeholder="请输入新员工的密码">
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="lastname" class="col-sm-2 control-label">确&nbsp;&nbsp;&nbsp;&nbsp;认:</label>
+							<label for="userPass1" class="col-sm-2 control-label">确&nbsp;&nbsp;&nbsp;&nbsp;认:</label>
 							<div class="col-sm-10">
 								<input type="password" class="form-control" id="userPass1"
 									name="userPass1" placeholder="请再次输入新员工的密码" onblur="checkpass()">
