--- a/order_consumer/src/main/resources/templates/pages/admin/onlinekitchens.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/onlinekitchens.html
@@ -1,17 +1,8 @@
-<%@ page language="java" import="java.util.*" pageEncoding="UTF-8"%>
-<%
-	String path = request.getContextPath();
-	String basePath = request.getScheme() + "://"
-			+ request.getServerName() + ":" + request.getServerPort()
-			+ path + "/";
-%>
-
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<base href="<%=basePath%>">
 
-<title>${ORDER_SYS_NAME}-餐厅管理员</title>
+	<meta charset="utf-8">
+<title>餐厅管理员</title>
 
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
@@ -21,11 +12,11 @@
 <!--
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	-->
-<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" href="css/dashboard.css">
+<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/dashboard.css">
 
 
-<link rel="stylesheet" href="css/font-awesome.min.css">
+<link rel="stylesheet" href="/css/font-awesome.min.css">
 
 <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
 <script src="bootstrap/js/jquery-1.11.1.min.js"></script>
@@ -143,14 +134,9 @@
 						<li role="separator" class="divider"></li>
 						<li><a href="toonlinewaiters.order">查看当前在线的厨师 </a></li>
 						<li><a href="toonlinekitchen.order">查看当前在线的点餐员</a></li>
-
-
 					</ul></li>
 				<li><a href="logout.order">退出登录</a></li>
 			</ul>
-
-
-
 			<form class="navbar-form navbar-right" method="post"
 				action="sendbord.order" target="formtarget">
 				<input type="text" class="form-control" placeholder="公告"
@@ -168,7 +154,7 @@
 			<div class="col-sm-3 col-md-2 sidebar">
 				<ul class="nav nav-sidebar">
 					<li class="nav-header"
-						style="font-size: 18;margin-bottom: 10px;margin-left: 10px"><i
+						style="font-size: 18px;margin-bottom: 10px;margin-left: 10px"><i
 						class="icon-credit-card icon-large"></i>&nbsp;运营功能</li>
 					<li><a href="toadminmain.order"><i
 							class="icon-money icon-large"></i>&nbsp; 顾客结账界面 <span
@@ -178,7 +164,7 @@
 				</ul>
 				<ul class="nav nav-sidebar">
 					<li class="nav-header"
-						style="font-size: 18;margin-bottom: 10px;margin-left: 10px"><i
+						style="font-size: 18px;margin-bottom: 10px;margin-left: 10px"><i
 						class="icon-cog icon-large"></i>&nbsp;餐厅管理</li>
 					<li><a href="touseradmin.order"><i
 							class="icon-group icon-large"></i>&nbsp;员工管理</a></li>
@@ -268,7 +254,7 @@
 					<h4 class="modal-title" id="myModalLabel">详细信息</h4>
 				</div>
 				<div class="modal-body"
-					style="background-image: url('img/body-bg.png')">
+					style="background-image: url('/img/body-bg.png')">
 
 
 
