--- a/order_consumer/src/main/resources/templates/pages/admin/operatedata.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/operatedata.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<title>${ORDER_SYS_NAME}-餐厅管理员</title>
+	<meta charset="utf-8">
+<title>餐厅管理员</title>
 
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
@@ -11,18 +12,17 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	-->
 
-<link rel="stylesheet" href="../../../static/css/dashboard.css">
-<link rel="stylesheet" href="../../../static/css/rome.css">
+<link rel="stylesheet" href="/css/dashboard.css">
+<link rel="stylesheet" href="/css/rome.css">
 
 
 <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-<script src="bootstrap/js/jquery-1.11.1.min.js"></script>
+<script src="/bootstrap/js/jquery-1.11.1.min.js"></script>
 
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/ajax.js"></script>
-<script type="text/javascript" src="js/rome.js"></script>
-
+<script src="/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/ajax.js"></script>
+<script type="text/javascript" src="/js/rome.js"></script>
 <script type="text/javascript">
 	function createXmlDom(str) {
 		if (document.all) {
@@ -159,12 +159,10 @@
 	}
 </script>
 </head>
-
 <body style="font-family: 微软雅黑" onload="begin()">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-
 				<ol class="breadcrumb">
 					<li><a href="/OrderSys/">首页</a></li>
 					<li>管理员</li>
@@ -177,35 +175,24 @@
 					<div class="panel-body" style="padding-bottom: 0px">
 						<form class="form-inline">
 							<div class="form-group">
-								<label for="exampleInputName2">开始时间：</label> <input type="text"
+								<label for="bt">开始时间：</label> <input type="text"
 									class="form-control" id="bt" name="bt">
 							</div>
 							&nbsp;&nbsp;
 							<div class="form-group">
-								<label for="exampleInputEmail2">结束时间：</label> <input type="text"
+								<label for="et">结束时间：</label> <input type="text"
 									class="form-control" id="et" name="et">
 							</div>
 							<input type="button" class="btn btn-danger" onclick="search()"
 								value="开始搜索" />
 						</form>
-
-
-
-
 					</div>
 				</div>
-
-
-
-
-
-
 				<div class="panel panel-danger">
 					<div class="panel-heading">
 						<h3 class="panel-title">搜索结果</h3>
 					</div>
 					<div class="panel-body">
-
 						<div class="table-responsive">
 							<table class="table table-striped">
 								<thead>
@@ -223,54 +210,35 @@
 										<td>Lorem</td>
 										<td>ipsum</td>
 										<td>dolor</td>
-										<td><i style="cursor: pointer; font-size: 14;"
+										<td><i style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-credit-card icon-large" title="确认结账"></i>&nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
+											style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class="icon-sitemap icon-large" title="查看订单详情"
 											onclick="$('#myModal').modal('show')"></i> &nbsp;&nbsp;<i
-											style="cursor: pointer; font-size: 14;"
+											style="cursor: pointer; font-size: 14px;"
 											onmouseover="this.style.color='orange'"
 											onmouseout="this.style.color='black'"
 											class=" icon-remove-sign icon-large" title="订单作废"
 											onclick="cancel(this)"></i></td>
 									</tr>
-
 								</tbody>
 							</table>
-							<!-- 
-							<nav> 
-							<ul class="pager">
-								<li><a href="#">上一页</a></li>
-								<li><a href="#">下一页</a></li>
-							</ul>
-							</nav>
-							 -->
 						</div>
-
 					</div>
 				</div>
-
 				<div
 					style="height:1px;width: 100%;background: #CCC;margin-bottom: 10px"></div>
 				<footer>
-				<p>&copy; ${ORDER_SYS_NAME}-中软国际ETC 2015</p>
+				<p>&copy; $ZRXL 2020</p>
 				</footer>
-
 			</div>
 		</div>
 	</div>
-
 	<br>
-
-
-
-
-
-
 	<!-- Modal -->
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
 		aria-labelledby="myModalLabel">
@@ -284,15 +252,7 @@
 					<h4 class="modal-title" id="myModalLabel">订单详情</h4>
 				</div>
 				<div class="modal-body"
-					style="background-image: url('img/body-bg.png')">
-
-
-
-
-
-
-
-
+					style="background-image: url('/img/body-bg.png')">
 					<div class="container-fluid" style="padding: 0px 0px;">
 						<div class="row-fluid">
 							<div class="span6" style="width:30%;float:left">
@@ -301,7 +261,7 @@
 									<h2 style="color: white;font-weight: bold;font-family: 微软雅黑">桌号</h2>
 									<p id="tableId">101</p>
 
-									<p style="text-align: center;font-size: 24;margin-top: 11px ">
+									<p style="text-align: center;font-size: 24px;margin-top: 11px ">
 										<i class="icon-warning-sign icon-large"></i>
 									</p>
 								</div>
@@ -313,9 +273,7 @@
 											style="background-color: #CCC;padding: 15px;margin: 1px;height:100px;">
 											<h3>开始时间</h3>
 											<p id="orderBeginTime">2015-9-8 10：30</p>
-
 										</div>
-
 									</div>
 									<div class="span6" style="width:50%;float:left">
 
@@ -323,7 +281,6 @@
 											style="background-color: #CF0;padding: 15px;margin: 1px;height:100px;">
 											<h3>结餐时间</h3>
 											<p id="orderEndTime">2015-9-8 10：30</p>
-
 										</div>
 									</div>
 								</div>
@@ -334,7 +291,6 @@
 											style="background-color: #FA0;padding: 15px;margin: 1px;height:100px;">
 											<h3>点餐服务员</h3>
 											<p id="userAccount">杨强</p>
-
 										</div>
 									</div>
 									<div class="span6" style="width:50%;float:left">
@@ -345,23 +301,18 @@
 											<p>
 												<span style="color:red;font-weight: bold" id="sumPrice">1000.00</span>
 											</p>
-
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-
-
-
 					<div class="panel panel-danger" style="margin-top: 10px">
 						<div class="panel-heading">
 							<h3 class="panel-title">订单详情</h3>
 						</div>
 						<div class="panel-body">
 							<table class="table table-striped">
-
 								<caption>该桌的订单详情如下</caption>
 								<thead>
 									<tr>
@@ -371,46 +322,16 @@
 									</tr>
 								</thead>
 								<tbody id="detailTable">
-
-
 								</tbody>
-
 							</table>
-							<!-- 
-							<nav>
-							<ul class="pager">
-								<li><a href="#">上一页</a></li>
-								<li><a href="#">下一页</a></li>
-							</ul>
-							</nav>
- -->
 						</div>
 					</div>
-
-
-
-
-
-
-
-
-
-
-
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-danger" data-dismiss="modal">关闭</button>
-
 				</div>
 			</div>
 		</div>
 	</div>
-
-
-
-
-
-
-
 </body>
 </html>
