--- a/order_consumer/src/main/resources/templates/pages/waiters/paylist.html
+++ b/order_consumer/src/main/resources/templates/pages/waiters/paylist.html
@@ -1,28 +1,20 @@
-
 <html>
 <head>
-
-<title>${ORDER_SYS_NAME}-餐厅管理员</title>
-
+	<meta charset="utf-8">
+<title>餐厅管理员</title>
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
 <meta http-equiv="keywords" content="keyword1,keyword2,keyword3">
 <meta http-equiv="description" content="This is my page">
-<!--
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	-->
-
-<link rel="stylesheet" href="../../../static/css/dashboard.css">
-
-
-
-<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-<script src="bootstrap/js/jquery-1.11.1.min.js"></script>
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/dashboard.css">
+	<link rel="stylesheet" href="/css/font-awesome.min.css">
+<script src="/bootstrap/js/jquery-1.11.1.min.js"></script>
 
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/ajax.js"></script>
+<script src="/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/ajax.js"></script>
 <script type="text/javascript">
 	function createXmlDom(str) {
 		if (document.all) {
