--- a/order_consumer/src/main/resources/templates/pages/waiters/takeorder_backup.html
+++ b/order_consumer/src/main/resources/templates/pages/waiters/takeorder_backup.html
@@ -1,29 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<base href="<%=basePath%>">
-
-<title>${ORDER_SYS_NAME}-餐厅管理员</title>
+	<meta charset="utf-8">
+<title>餐厅管理员</title>
 
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
 <meta http-equiv="keywords" content="keyword1,keyword2,keyword3">
 <meta http-equiv="description" content="This is my page">
-<!--
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	-->
-
-<link rel="stylesheet" href="../../../static/css/dashboard.css">
-
-
-
+	<link rel="stylesheet" href="/css/dashboard.css">
+	<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+	<script src="/bootstrap/js/bootstrap.min.js"></script>
 <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-<script src="../../../static/bootstrap/js/jquery-1.11.1.min.js"></script>
+<script src="/bootstrap/js/jquery-1.11.1.min.js"></script>
 
-<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="../../../static/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="../../../static/js/ajax.js"></script>
+
+<script type="text/javascript" src="/js/ajax.js"></script>
 
 
 </head>
@@ -58,7 +50,7 @@
 									src="../../../static/img/dishes/1.jpg"></a>
 								<h4>鱼香肉丝</h4>
 								<span class="text-muted">色香味俱全，顾客都喜欢</span>
-								<div class="class="form-group"">
+								<div class="form-group">
 									<form>
 										<div style="width:120px;margin: 0px auto">
 											<div class="input-group">
@@ -89,7 +81,7 @@
 									src="../../../static/img/dishes/1.jpg"></a>
 								<h4>鱼香肉丝</h4>
 								<span class="text-muted">色香味俱全，顾客都喜欢</span>
-								<div class="class="form-group"">
+								<div class="form-group">
 									<form>
 										<div style="width:120px;margin: 0px auto">
 											<div class="input-group">
@@ -120,7 +112,7 @@
 									src="../../../static/img/dishes/1.jpg"></a>
 								<h4>鱼香肉丝</h4>
 								<span class="text-muted">色香味俱全，顾客都喜欢</span>
-								<div class="class="form-group"">
+								<div class="form-group">
 									<form>
 										<div style="width:120px;margin: 0px auto">
 											<div class="input-group">
@@ -151,7 +143,7 @@
 									src="../../../static/img/dishes/1.jpg"></a>
 								<h4>鱼香肉丝</h4>
 								<span class="text-muted">色香味俱全，顾客都喜欢</span>
-								<div class="class="form-group"">
+								<div class="form-group">
 									<form>
 										<div style="width:120px;margin: 0px auto">
 											<div class="input-group">
@@ -182,7 +174,7 @@
 									src="../../../static/img/dishes/1.jpg"></a>
 								<h4>鱼香肉丝</h4>
 								<span class="text-muted">色香味俱全，顾客都喜欢</span>
-								<div class="class="form-group"">
+								<div class="form-group">
 									<form>
 										<div style="width:120px;margin: 0px auto">
 											<div class="input-group">
@@ -213,7 +205,7 @@
 									src="../../../static/img/dishes/1.jpg"></a>
 								<h4>鱼香肉丝</h4>
 								<span class="text-muted">色香味俱全，顾客都喜欢</span>
-								<div class="class="form-group"">
+								<div class="form-group">
 									<form>
 										<div style="width:120px;margin: 0px auto">
 											<div class="input-group">
@@ -244,7 +236,7 @@
 									src="../../../static/img/dishes/1.jpg"></a>
 								<h4>鱼香肉丝</h4>
 								<span class="text-muted">色香味俱全，顾客都喜欢</span>
-								<div class="class="form-group"">
+								<div class="form-group">
 									<form>
 										<div style="width:120px;margin: 0px auto">
 											<div class="input-group">
@@ -282,7 +274,7 @@
 
 						<div style="text-align: center;">
 							<a href="" class="btn btn-danger"
-								style="width: 40%;margin-bottom: 15px;font-size: 18;font-weight: bold;">确认订单</a>
+								style="width: 40%;margin-bottom: 15px;font-size: 18px;font-weight: bold;">确认订单</a>
 						</div>
 					</div>
 				</div>
