--- a/order_consumer/src/main/resources/templates/pages/page/admin.html
+++ b/order_consumer/src/main/resources/templates/pages/page/admin.html
@@ -39,7 +39,7 @@
 						<li><span class="navbar-brand">餐厅管理界面</span></li>
 
 						<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-							 aria-expanded="false"><img src="/img/faces/default.jpg" width="24" height="24" class="img-circle" style="border:1px solid #FFF" />&nbsp;&nbsp;当前用户:【】,身份为管理员
+							 aria-expanded="false"><img src="/img/faces/default.jpg" width="24" height="24" class="img-circle" style="border:1px solid #FFF" />&nbsp;&nbsp;当前用户:【${userInfo.useraccount}】,身份为管理员
 								<span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li style="text-align: center;padding-top: 15px"><img src="/img/faces/default.jpg" width="128" height="128"
