--- a/order_consumer/src/main/resources/templates/login.html
+++ b/order_consumer/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html>
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
 	<script src="/bootstrap/js/bootstrap.js"></script>
 	<link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
 	<link href="/bootstrap/css/main.css" rel="stylesheet">
-	<script type="text/javascript" src="/js/loginUser.js"></script>
+	<script type="text/javascript" src="/js/loginUser.js"></script>-
 
 	<style type="text/css">
 		.button13 {
