--- a/order_consumer/src/main/resources/templates/pages/page/admin.html
+++ b/order_consumer/src/main/resources/templates/pages/page/admin.html
@@ -5,10 +5,10 @@
 		<title></title>
 		<link rel="stylesheet" href="/css/dashboard.css">
 		<script src="/bootstrap/js/jquery-1.11.1.min.js"></script>
-
 		<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 		<script src="/bootstrap/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="/static/js/ajax.js"></script>
+		<script src="/js/ajax.js"></script>
+
 		<script type="text/javascript">
 			$(function(){
 				$(".click").click(function(){
@@ -52,9 +52,6 @@
 						</li>
 						<li><a href="javascript:newOrder()">退出登录</a></li>
 					</ul>
-					<form class="navbar-form navbar-right">
-						<input type="text" class="form-control" placeholder="搜索点餐员">
-					</form>
 				</div>
 			</div>
 		</nav>
