添加用户分页

--- a/order_consumer/src/main/resources/templates/pages/admin/useradmin.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/useradmin.html
@@ -13,7 +13,7 @@
 		<script src="/bootstrap/js/bootstrap.min.js"></script>
 		<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
 		<script src="/bootstrap/js/jquery-1.11.1.min.js"></script>
-		<script src="/js/listUser.js"></script>
+		<script src="/js/adminUser.js"></script>
 		<script type="text/javascript">
 
 			function deleteUser(id, name, obj) {
