修改usercontroller,tableservice ,xml实现方法，添加修改员工信息js

--- a/order_consumer/src/main/resources/templates/pages/page/waiterpage.html
+++ b/order_consumer/src/main/resources/templates/pages/page/waiterpage.html
@@ -111,7 +111,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><span class="navbar-brand">点单界面：当前桌号<span id="tableresult">【】</span></span></li>
 						<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-							 aria-expanded="false"><img src="" width="24" height="24" class="img-circle"
+							 aria-expanded="false"><img src="/img/faces/${userInfo.faceimg}" width="24" height="24" class="img-circle"
                                                         style="border:1px solid #FFF" />&nbsp;&nbsp;当前用户:【${userInfo.useraccount}】,身份为服务员
 								<span class="caret"></span></a>
 							<ul class="dropdown-menu">
