菜品信息修改

--- a/order_consumer/src/main/resources/templates/pages/admin/dishesadmin.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/dishesadmin.html
@@ -43,7 +43,7 @@
 				.removeChild(obj.parentNode.parentNode);
 	}
 
-	function getDishesList(page) {
+	/*function getDishesList(page) {
 
 		xmlAjaxRequest("getdishesbypage.order?page=" + page + "&time="
 				+ Math.random(), "get", true, null, showList, null, null);
@@ -144,7 +144,7 @@
 
 		}
 
-	}
+	}*/
 
 	function cancel(obj) {
 
@@ -179,7 +179,7 @@
 <script type="text/javascript" src="/js/dishesadmin.js"></script>
 </head>
 
-<body style="font-family: 微软雅黑" onload="getDishesList(1)">
+<body style="font-family: 微软雅黑">
 
 	<div class="container-fluid">
 		<div class="row">
