点餐界面js提交

--- a/order_consumer/src/main/resources/templates/pages/admin/main_backup1.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/main_backup1.html
@@ -23,6 +23,7 @@
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 <script src="/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/ajax.js"></script>
+<script type="text/javascript" src="/js/main_backup1.js"></script>
 <script type="text/javascript">
 	function createXmlDom(str) {
 		if (document.all) {
@@ -194,44 +195,24 @@
 						<h2 class="panel-title">今日特色推荐菜品</h2>
 					</div>
 					<div class="panel-body" style="padding-bottom: 0px">
-						<div class="row placeholders">
-							<div class="col-xs-6 col-sm-3 placeholder">
+						<div id="byrecommend" class="row placeholders">
+
+							<!--<div class="col-xs-6 col-sm-3 placeholder">
 								<a href="#"> <img class="img-thumbnail"
 									style="border-radius:20px" alt="Generic placeholder thumbnail"
 									src="../../../static/img/dishes/1.jpg"></a>
 								<h4>鱼香肉丝</h4>
 								<span class="text-muted">色香味俱全，顾客都喜欢</span>
-							</div>
-							<div class="col-xs-6 col-sm-3 placeholder">
-								<img data-src="holder.js/200x200/auto/vine"
-									class="img-thumbnail" alt="Generic placeholder thumbnail"
-									style="border-radius:20px" src="../../../static/img/dishes/1.jpg">
-								<h4>鱼香肉丝</h4>
-								<span class="text-muted">色香味俱全，顾客都喜欢</span>
-							</div>
-							<div class="col-xs-6 col-sm-3 placeholder">
-								<img data-src="holder.js/200x200/auto/sky" class="img-thumbnail"
-									alt="Generic placeholder thumbnail" style="border-radius:20px"
-									src="../../../static/img/dishes/1.jpg">
-								<h4>鱼香肉丝</h4>
-								<span class="text-muted">色香味俱全，顾客都喜欢</span>
-							</div>
-							<div class="col-xs-6 col-sm-3 placeholder">
-								<img data-src="holder.js/200x200/auto/vine"
-									class="img-thumbnail" alt="Generic placeholder thumbnail"
-									style="border-radius:20px" src="../../../static/img/dishes/1.jpg">
-								<h4>鱼香肉丝</h4>
-								<span class="text-muted">色香味俱全，顾客都喜欢</span>
-							</div>
+						</div>-->
 
 
-							<nav>
+							<!--<nav>
 							<ul class="pager" style="margin-right: 20px">
 
 								<li class="next"><a href="todishesadmin.order">更多特色菜品 <span
 										aria-hidden="true">&rarr;</span></a></li>
 							</ul>
-							</nav>
+							</nav>-->
 						</div>
 					</div>
 				</div>
