修改table中一些方法

--- a/order_consumer/src/main/resources/templates/pages/page/waiterpage.html
+++ b/order_consumer/src/main/resources/templates/pages/page/waiterpage.html
@@ -8,15 +8,16 @@
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 		<script src="/bootstrap/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="/js/ajax.js"></script>
-		<script type="text/javascript">
+		<script type="text/javascript" src="/js/waiters/waiterpage.js"></script>
+		<!--<script type="text/javascript">
 			$(function(){
 				$(".click").click(function(){
 					$(this).addClass("active");
 					$(this).siblings().removeClass("active");
 				})
 			});
-		</script>
-		<script type="text/javascript">
+		</script>-->
+		<!--<script type="text/javascript">
 			function begin() {
 
 				var input = document.getElementById("inputfile");
@@ -92,7 +93,7 @@
 				}
 				testState();
 			}
-		</script>
+		</script>-->
 
 	</head>
 
@@ -153,7 +154,7 @@
 			</div>
 		</div>
 		<section>
-			<iframe src="" name="mainwindow" scrolling="no" width="100%" height="900px" frameborder="0px"></iframe>
+			<iframe src="" name="mainwindow" scrolling="no" width="100%" height="1950px" frameborder="0px"></iframe>
 		</section>
 	</body>
 
